[tool.poetry]
name = "bcraft-test"
version = "0.1.0"
description = ""
authors = ["Антон Никольский <anton@Antons-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "bcraft_test"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.12"}
psycopg2-binary = "^2.9.6"
coloredlogs = "^15.0.1"
alembic = "^1.10.4"
aiopg = "^1.4.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

